--- a/package.json
+++ b/package.json
@@ -103,12 +103,12 @@
     "typescript": "5.6.3",
     "tailwindcss": "^3.4.17",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47"
+    "postcss": "^8.4.47",
+    "@tailwindcss/typography": "^0.5.15"
   },
   "devDependencies": {
 
-    "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "^4.1.3",
+
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
