--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
-  "functions": {
-    "server/index.ts": {
-      "runtime": "nodejs18.x"
+  "version": 2,
+  "builds": [
+    {
+      "src": "server/index.ts",
+      "use": "@vercel/node"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/server/index.ts"
+    }
+  ]
 }
