--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
+  "functions": {
+    "server/index.ts": {
+      "maxDuration": 30
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/server/index.ts"
+      "destination": "/api/serverless"
     }
   ]
 }
