--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
+  "vercel": {
+    "functions": {
+      "api/serverless.ts": {
+        "maxDuration": 30
+      }
+    }
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build",
