--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
     "tailwindcss": "^3.4.17",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "@tailwindcss/typography": "^0.5.15"
+    "@tailwindcss/typography": "^0.5.15",
+    "@vercel/node": "^3.0.0"
   },
   "devDependencies": {
 
@@ -123,7 +124,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
-    "@vercel/node": "^3.0.0",
+
 
     "cross-env": "^10.0.0",
     "drizzle-kit": "^0.30.4",
