--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "compression": "^1.7.4",
     "winston": "^3.11.0",
     "web-vitals": "^3.5.0",
+    "undici": "^6.21.1",
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
